[gd_scene load_steps=4 format=3 uid="uid://b772bu81umnm0"]

[ext_resource type="Script" uid="uid://dfg457ebkency" path="res://ui/main menu/main_menu.gd" id="1_qwnig"]
[ext_resource type="Script" uid="uid://bak8y51idvq8r" path="res://ui/utilities/button_grab_focus/button_grab_focus.gd" id="2_cngla"]
[ext_resource type="PackedScene" uid="uid://08qbsg4jcjna" path="res://ui/main menu/select screen/select_screen.tscn" id="3_cngla"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("main_screen", "select_screen")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwnig")
game_scene = "uid://d3t2ruo0h65a6"
main_screen = NodePath("MainScreen")
select_screen = NodePath("SelectScreen")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30

[node name="Label" type="Label" parent="MainScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 42
text = "BIMBA"

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.526
anchor_right = 0.5
anchor_bottom = 0.526
offset_left = -100.0
offset_top = -39.360016
offset_right = 100.0
offset_bottom = 64.639984
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MainScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PLAY"
script = ExtResource("2_cngla")

[node name="QuitButton" type="Button" parent="MainScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "QUIT"

[node name="SelectScreen" parent="." instance=ExtResource("3_cngla")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainScreen/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainScreen/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="go_back" from="SelectScreen" to="." method="_on_select_screen_go_back"]
